--- a/src/app/components/holidays/holidays.component.scss
+++ b/src/app/components/holidays/holidays.component.scss
@@ -1,6 +1,6 @@
 .holidays-main-div{
-    padding: 40px 40px 0px 40px;
-    background-color: #F5F6FA;
+    padding: 20px 20px 20px 20px;
+    background-color: #F0F2F7;
     height: 100vh;
     
     .table-header {
