--- a/src/styles.scss
+++ b/src/styles.scss
@@ -150,3 +150,17 @@ button:focus {
   color: #1E3262!important;
 }
 }
+
+.mat-form-field-infix {
+  width: 292px!important;
+}
+.main-dashboard {
+  .mat-header-cell {
+   color: #1E3262;
+}
+}
+.main-div {
+  .mat-header-cell {
+   color: #1E3262;
+}
+}
