--- a/src/app/components/apply/apply.component.html
+++ b/src/app/components/apply/apply.component.html
@@ -5,7 +5,7 @@
             <h2>Apply For Leave</h2>
         </div>
         <div class="button">
-        <a href="" class="btn padding-left"><i _ngcontent-det-c5="" class="material-icons"> keyboard_arrow_left </i> Back</a></div>
+        <a routerLink="/holiday" class="btn padding-left"><i _ngcontent-det-c5="" class="material-icons"> keyboard_arrow_left </i> Back</a></div>
     </div>
   </div>
   
@@ -27,6 +27,7 @@
                       <mat-option value="option">Sick Leave</mat-option>
                       <mat-option value="option">Annual Leave</mat-option>
                       <mat-option value="option">Personal Work</mat-option>
+                      <mat-option value="option">Earned </mat-option>
                     </mat-select>
                   </mat-form-field>   
                <br>
