--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,51 +1,58 @@
 <div class="main-div">
-    <div class="notify-border">
-        <div class="bg">
-<div class="clearfix">
-    <div class="clear">
-        <h6 class="ml-4 mt-3"><i class="fas fa-check check-icon mr-4"></i>Success...</h6>
+    <!-- <div class="notification">
+        <div class="notification-inner">
+    <i class="fas fa-check check-icon mr-3"></i>
+    <div class="text ">Added a new hloliday </div>
+</div>
+</div> -->
+<div  class="apply-header">
+    <div  class="header clearfix">
+        <div class="text">
+            <h2>Notifications</h2>
         </div>
-        <div class="clear ml-3">
-<p class="mt-3">Everything is good</p>
+        <div class="button">
+            <a  class="btn">Clear all</a>
+</div>
+</div>
+</div>
+
+<div class="row">
+    <!-- notification -->
+    <div class="notification">
+        <div class="notify-inner pd info"> 
+            New holiday added in Arethso Calender
+            <i class="material-icons"> close </i>
         </div>
-</div>
-</div>
-</div>
-<div class=" nb">
-    <div class="bg1">
-    <div class="clearfix">
-        <div class="clear">
-            <h6 class="ml-4 mt-3"><i class="fas fa-check check-icon mr-4"></i>Success...</h6>
-            </div>
-            <div class="clear ml-4">
-    <p class="mt-3">Everything is good</p>
-            </div>
     </div>
-    </div>
-    </div>
-    <div class=" nb1">
-        <div class="bg3">
-        <div class="clearfix">
-            <div class="clear">
-                <h6 class="ml-4 mt-3"><i class="fas fa-check check-icon mr-4"></i>Success...</h6>
-                </div>
-                <div class="clear ml-4">
-        <p class="mt-3">Everything is good</p>
-                </div>
-        </div>
-        </div>
-        </div>
-        <div class=" nb2">
-            <div class="bg4">
-            <div class="clearfix">
-                <div class="clear">
-                    <h6 class="ml-4 mt-3"><i class="fas fa-check check-icon mr-4"></i>Success...</h6>
-                    </div>
-                    <div class="clear ml-4">
-            <p class="mt-3">Everything is good</p>
-                    </div>
+
+     <!-- notification -->
+     <div class="notification">
+            <div class="notify-inner pd cancel-bg"> 
+                Coming monday holiday is canceled due to hard work
+                <i class="material-icons"> close </i>
             </div>
+        </div>
+
+         <!-- notification -->
+    <div class="notification">
+            <div class="notify-inner pd success"> 
+                Notification is successfully opened
+                <i class="material-icons"> close </i>
             </div>
+        </div>
+
+         <!-- notification -->
+    <div class="notification">
+            <div class="notify-inner pd special"> 
+                No one will take leave in running month due to hard work
+                <i class="material-icons"> close </i>
             </div>
+        </div>
+
+      </div>
+
+      
 </div>
+  
+        
    
