--- a/src/app/components/notification/notification.component.scss
+++ b/src/app/components/notification/notification.component.scss
@@ -1,47 +1,76 @@
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
+
   .bg{
     background: #96DF73;
     border-radius: 5px
   }
-  .bg1{
-    background: #EF403D;
-    border-radius: 5px
-  }
-  .bg3{
-    background: #FFD557;
-    border-radius: 5px
-  }
-  .bg4{
-    background: #ACDAE2;
-    border-radius: 5px
-  }
-  .clear{
-      float: left;
-  }
-  .notify-border{
+  
+  .notification{
       border: 1px;
       height: 50px;
-      padding: 0px 20px 0px 20px;
+     display: flex;
+     align-items: center;
+     background: rgba(0, 0, 0, 0.04);
+     margin: 10px 0px;
+     padding: 0px 15px;
+     border-radius: 5px;
+     width: min-content;
+     .notification-inner {
+      flex: 0 0 auto; 
+     }
   }
-  .check-icon{
-      color: white;
+  .row {
+    display:flex;
   }
-  .nb{
-      margin-top: 20px;
-      height: 50px;
-      padding: 0px 20px 0px 20px;
+  .div1 {
+    flex: 1 1 auto;
   }
-  .nb1{
-      margin-top: 20px;
-    padding: 0px 20px 0px 20px;
-      height: 50px;
+  
+  .notify-inner {
+    flex: 0 0 auto; 
+    background-color: rgba(0,0,0,0.125);
+    border-radius: 5px;
+    align-items: center;
+    display: flex;
+    font-size: 15px;
   }
-  .nb2{
-     padding: 0px 20px 0px 20px;
-      margin-top: 20px;
-      height: 50px;
+/* other stuff */
+.pd {
+  padding:15px;
+}
+.row {
+  width:80%;
+  padding:1em;
+  overflow:hidden;
+}
+.notification {
+  color: white;
+  width: 100%;
+  background-color: transparent;
+  i {
+    margin-left: 9px;
+    color: #d8d0d0;
   }
+}  
+
+.cancel-bg {
+  background: #D9534F;
+}
+.info {
+  background: #5BC0DE;
+}
+.success {
+  background: #5CB85C;
+}
+
+.special {
+  background-color: #444
+}
+.apply-header {
+  margin: 30px 45px 0px 20px;
+  .header {
+    margin-bottom: 0px;
+  }
+  .btn {
+    padding: 5px 13px;
+  }
+}
