--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -122,7 +122,7 @@ margin-left: 48px;
    margin-left: 66px;
 }
 .psw a{
-    color: #FFFFFF;
+    color: cyan;
     font-weight: 500;
     text-decoration: none;
     cursor: pointer;
