--- a/src/app/components/holidays/holidays.component.html
+++ b/src/app/components/holidays/holidays.component.html
@@ -4,7 +4,9 @@
             <h2>History</h2>
         </div>
         <div class="button">
-        <a href="" class="btn"> Back</a></div>
+        <!-- <a href="" class="btn"> Back</a> -->
+        <a mat-flat-button routerLink="" class="backbutton">Back</a>
+      </div>
     </div>
     <div class="table-header clearfix">
 <div class="year-select">
