--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -32,15 +32,15 @@ input:focus{
   letter-spacing: 1px;
 }
 .button1{
+ 
+  
+   padding: 4px 147px;
    border: none;
-   background-color: #FFFFFF;
-   padding: 10px 147px;
-   border-radius: 25px;
    color: #0778bd;
    margin-top: 36px;
    margin-left: 66px;
-   font-weight: bold;
-   font-size: 18px;
+  //  font-weight: bold;
+  //  font-size: 18px;
 }
 .button1:hover{
   transition: 1s;
