--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -11,7 +11,8 @@
             <h2>Notifications</h2>
         </div>
         <div class="button">
-            <a  class="btn">Clear all</a>
+            <!-- <a>Clear all</a> -->
+            <a mat-flat-button clearbutton class="clearbutton">Clear all</a>
 </div>
 </div>
 </div>
