--- a/src/app/components/notification/notification.component.scss
+++ b/src/app/components/notification/notification.component.scss
@@ -70,7 +70,9 @@
   .header {
     margin-bottom: 0px;
   }
-  .btn {
-    padding: 5px 13px;
+  .clearbutton {
+    padding: 1px 13px;
+    background-color: #5bc0de;
+    color: white;
   }
 }
