--- a/src/app/components/record/record.component.html
+++ b/src/app/components/record/record.component.html
@@ -180,7 +180,8 @@
                 </div>
                 <div class="detail1">
                     <div class="details">
-                        <button class="bbutton">pending</button>
+                      
+                        <button mat-flat-button class="bbutton">pending</button>
                         <p>Philip Valdes<span class="philip"> has applied for sick leave</span></p>
                         <hr>
                         <p style="margin-bottom: 4px;">20th Jan 2019 - 21th Jan 2020<span class="day">2 Days</span></p>
@@ -188,15 +189,19 @@
                         <div class="reason">
                             <span>"Dengue fever"</span>
                         </div>
-                        <form class="example-form">
+                        <form class="example-form "appearance="outline">
                             <mat-form-field class="example-full-width">
                                 <textarea matInput placeholder="Add comments"></textarea>
                             </mat-form-field>
                         </form>
                         <hr>
                         <div class="result">
-                            <button class="bbutton1">Decline</button>
-                            <button class="bbutton2">Approve</button>
+                           
+                            
+                            <button mat-flat-button color="warn" class="bbutton1">Decline</button>
+                            <button mat-flat-button style="background-color: green;color:white" class="bbutton1">Approve</button>
+                            
+                            
     
                         </div>
     
