--- a/src/app/components/holidays/holidays.component.scss
+++ b/src/app/components/holidays/holidays.component.scss
@@ -168,3 +168,7 @@ table th, td {
   font-size: 18px!important;
   padding: 0px 11px!important;
 }
+.backbutton{
+  background-color: #23b9fc;
+    color: white;
+}
