--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -31,7 +31,8 @@
                           </div>
                          <div class="center">
                            <!-- <a href="#" type="button" class="btn btn-sucess reunded button1" name="button">Log In</a> -->
-                            <button type="button" class="btn btn-success  button1" name="button">Log In</button>
+                           <button mat-flat-button class="button1">Log In</button>
+                            
                         </div>                      
                           <div class="subheading">
                                 <!-- <p class="psw">Forgot <a routerLink="reset" routerLinkActive="active"> password?</a></p> -->
