--- a/src/app/components/login/recovery.component.html
+++ b/src/app/components/login/recovery.component.html
@@ -18,7 +18,8 @@
                                 
                              <div class="center">
                                <!-- <a href="#" type="button" class="btn btn-sucess reunded button1" name="button">Log In</a> -->
-                                <button type="button" class="btn btn-success  button1" name="button">Send Recovery Link</button>
+                                
+                                <button mat-flat-button class="button1">Send Recovery Link</button>
                             </div>                      
                               
                             </form>
