--- a/src/app/components/login/reset.component.html
+++ b/src/app/components/login/reset.component.html
@@ -66,7 +66,8 @@
                                              
                                              <div class="center">
                                                <!-- <a href="#" type="button" class="btn btn-sucess reunded button1" name="button">Log In</a> -->
-                                                <button type="button" class="btn btn-success  button1" name="button">Submit</button>
+                                               <button mat-flat-button class="button1">Submit</button>
+                                                
                                             </div>                      
                                              
                                             </form>
