--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -11,7 +11,8 @@
                     <div class="subhead">
                         <h5>Overview</h5>
                         <div class="editbutton">
-                            <button class="edit" (click)="openDialog()"> Edit </button>
+                           
+                            <button mat-flat-button class="edit" (click)="openDialog()">Edit</button>
                         </div>
             
                     </div>
