--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,14 +1,15 @@
-.backgroundimage{
-  //  background-color: #fff;
-   background:url("../../../assets/images/bg-login.png");
-   background-size:cover;
-    height:100vh;
-    overflow: hidden;
+.backgroundimage {
+	//  background-color: #fff;
+	background: url("../../../assets/images/bg-login.png");
+	background-size: cover;
+	height: 100vh;
+	overflow: hidden;
 }
+
 .material-icons {
-  color: white
-  !important;
+	color: white !important;
 }
+
 // input{
 //   background:none;
 //   border:none;
@@ -20,136 +21,151 @@
 //    margin-right: 26px;
 // }
 .mat-checkbox {
-  margin-left: 100px;
-  color: white;
+	// margin-left: 100px;
+	color: white;
 }
-input:focus{
-  outline:none;
+
+input:focus {
+	outline: none;
 }
+
 ::placeholder {
-  color:#ccc;
-  text-transform:uppercase;
-  letter-spacing: 1px;
+	color: #ccc;
+	text-transform: uppercase;
+	letter-spacing: 1px;
 }
-.button1{
- 
-  
-   padding: 4px 147px;
-   border: none;
-   color: #0778bd;
-   margin-top: 36px;
-   margin-left: 66px;
-  //  font-weight: bold;
-  //  font-size: 18px;
+
+.button1 {
+	padding: 4px 147px;
+	border: none;
+	color: #0778bd;
+	margin-top: 36px;
+	//  margin-left: 66px;
+	//  font-weight: bold;
+	//  font-size: 18px;
 }
-.button1:hover{
-  transition: 1s;
-  -webkit-box-shadow: 0px 1px 16px -1px rgba(255,255,255,1);
--moz-box-shadow: 0px 1px 16px -1px rgba(255,255,255,1);
-box-shadow: 0px 1px 16px -1px rgba(255,255,255,1);
+
+.button1:hover {
+	transition: 1s;
+	-webkit-box-shadow: 0px 1px 16px -1px rgba(255, 255, 255, 1);
+	-moz-box-shadow: 0px 1px 16px -1px rgba(255, 255, 255, 1);
+	box-shadow: 0px 1px 16px -1px rgba(255, 255, 255, 1);
 }
-.button1:focus{
-  outline: none;
+
+.button1:focus {
+	outline: none;
 }
-.button2{
-  background-color: transparent;
-  border: none;
+
+.button2 {
+	background-color: transparent;
+	border: none;
 }
-.container{
-  /* position:relative;
-  top:200px;
-  margin:auto; */
-  height:520px;
-  width:520px;
-  // background-color: #000000C2;
-  // border-radius:23px;
+
+.container {
+	height: 520px;
+	width: 520px;
 }
-.fa-eye-slash:hover{
-  cursor: pointer;
+
+.fa-eye-slash:hover {
+	cursor: pointer;
 }
-.forgot-pss{
-  a{
-  margin-left: 80px;
-  color: white;
-  text-decoration: none;
+
+.forgot-pss {
+	a {
+		margin-left: 80px;
+		color: white;
+		text-decoration: none;
+	}
 }
-}
+
 .mat-form-field-appearance-legacy .mat-form-field-underline {
-  color: white!important;
+	color: white!important;
 }
+
 @media screen and (max-width: 600px) {
-.container{
-   /* position:relative;
-  top:200px;
-  padding-left:2%; 
-  height:60%; */
-  width:100%;
-  background-color: #000000C2;
-  border-radius:23px;
+	.container {
+		width: 100%;
+		background-color: #000000C2;
+		border-radius: 23px;
+	}
+	form {
+		height: auto;
+		width: 100%;
+	}
 }
-form {
-height: auto;
-width: 100%;
+
+.form-group {
+	display: flex;
+	margin: 20px 0px 20px 0px;
+	text-align: center;
+	width: 100%;
+	margin-left: 90px;
 }
-  }
-.form-group{
-  display:flex;
-  margin: 20px 0px 20px 0px;
-  text-align: center;
-  width:100%;
-  margin-left: 90px;
-}
+
 i {
-  position: relative;
-  top: 16px;
-  right: -7px;
-  margin-right: 20px;  
+	position: relative;
+	top: 16px;
+	right: -7px;
+	margin-right: 20px;
 }
-.image1{
-font-size: 85px;  
-border-radius:50%;
-// margin-top: -72px;
-margin-left: 48px;
+
+.image1 {
+	font-size: 85px;
+	border-radius: 50%;
+	margin-bottom: 30px;
 }
+
 .mat-form-field {
-  width: 60%!important;
+	width: 60%!important;
 }
+
 .psw {
-   display: block;
-   
-   color: white;
-   margin-top: 39px;
-   margin-left: 66px;
+	display: block;
+	color: white;
+	margin-top: 39px;
 }
-.psw a{
-    color: cyan;
-    font-weight: 500;
-    text-decoration: none;
-    cursor: pointer;
-    margin-left: 6px;
+
+.psw a {
+	color: cyan;
+	font-weight: 500;
+	text-decoration: none;
+	cursor: pointer;
+	margin-left: 6px;
 }
-.psw a:hover{
-  text-decoration: underline;
+
+.psw a:hover {
+	text-decoration: underline;
 }
-.subheading{
-    text-align: center;
+
+.subheading {
+	text-align: center;
 }
-.terms{
-    color: white;
-    text-align: center;
+
+.terms {
+	color: white;
+	text-align: center;
 }
+
 .Aligner {
- display: flex;
- align-items: center;
- justify-content: center;
- height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
 }
+
 .Aligner-item {
- max-width: 50%;
+	max-width: 50%;
 }
-.center{
-   text-align: center;
+
+.center {
+	text-align: center;
 }
-.remember{
-  display: flex;
+
+.login {
+	text-align: center;
+}
+
+.picon {
+	float: right;
+	margin-top: -41px;
 }
