--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,7 +1,18 @@
 <section class="heading">
                 <div class="dot">
                     S
+                    <div class="profileimage">
+                            <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" style="border-radius:50%; width:70px">
+    
+                    </div>
                 </div>
+                
+
+              
+
+                
+                
+                <p><a href="#" class="upload">Change your profile picture</a></p>
                 <h5>Samuel Smith</h5>
             
             </section>
