--- a/src/app/components/record/record.component.html
+++ b/src/app/components/record/record.component.html
@@ -189,8 +189,8 @@
                         <div class="reason">
                             <span>"Dengue fever"</span>
                         </div>
-                        <form class="example-form "appearance="outline">
-                            <mat-form-field class="example-full-width">
+                        <form class="example-form ">
+                            <mat-form-field class="example-full-width" appearance="outline">
                                 <textarea matInput placeholder="Add comments"></textarea>
                             </mat-form-field>
                         </form>
