--- a/src/app/components/login/signup.component.html
+++ b/src/app/components/login/signup.component.html
@@ -1,99 +1,57 @@
-<!-- <div class="backgroundimage">
-        <div class="Aligner">
-            <div class="container d-100 text-center">
-                    <form id="sign">
+<div class="backgroundimage">
+  <div class="Aligner">
+              <div class="container d-100 text-center">
+                  
+                      <form class="login">
                         <i class="material-icons image1">account_circle</i>
-                            -->
-                      <!-- <img src="../../../assets/images/login10.png" alt="loginimage" height = 150px width=150px class="image1"/> -->
-                        
-                     
-<!--                             
+                       <p><a href="#" class="upload">Upload your profile picture</a></p> 
+                       
                           <div class="form-group" text-align="center">
-                            <mat-form-field>
-                                <input matInput placeholder="Username">
-                              </mat-form-field>
-                              <i class="material-icons">
-                                  person
-                                  </i>
-                        </div>
-                      <div class="form-group" text-align="center">
-                          <mat-form-field>
-                              <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">
-                              <button class="button2" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                              </button>
-                            </mat-form-field>
-                      </div>
-                      <div class="form-group" text-align="center">
-                          <mat-form-field>
-                              <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">
-                              <button class="button2" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                              </button>
-                            </mat-form-field>
-                        </div>
-                        <div class="terms">
-                            <p>By creating an account you agree to our<br> <a href="#" style="color:dodgerblue">Terms & Privacy</a></p>
+                           
+                                <mat-form-field appearance="outline">
+                                    <mat-label>Username</mat-label>
+                                  <input matInput placeholder="">
+                                  <i class="material-icons picon">
+                                    person
+                                    </i>
+                                  
+                                </mat-form-field>
+                          </div>
 
-
-                        </div>
-                   <div class="center">
-                        <button type="button" class="btn btn-success rounded button1" name="button">Sign Up</button>
-
-                   </div>
-                       
-                       
-                      
-                       
+                          <div class="form-group" text-align="center">
+                            
+                              <mat-form-field appearance="outline"> 
+                                  <mat-label>Email</mat-label>                                                            
+                                  <input matInput placeholder="">  
+                                  <i class="material-icons picon">
+                                    email
+                                    </i>                              
+                                </mat-form-field>
+                                
+                          </div>
+                        <div class="form-group" text-align="center">
                           
-                    </form>
+                          <mat-form-field appearance="outline">
+                              <mat-label>Password</mat-label>
+                                  <input matInput placeholder="">
+                                  <i class="material-icons picon">
+                                    lock
+                                    </i>
+                                </mat-form-field>
+                        </div>
+                        <div class="remember">
+                          <mat-checkbox>Remember me</mat-checkbox>
+                          <span class="forgot-pss"><a href="#">Forgot Password?</a></span>
+                        </div>
+                       <div class="center">
+                        
+                         <button mat-flat-button class="button1">Sign Up</button>
+                          
+                      </div>                      
+                       
+                      </form>
+                    </div>
+                    </div>
                   </div>
-                  </div>
-                </div> -->
-                <div class="backgroundimage">
-                    <div class="Aligner">
-                                <div class="container d-100 text-center">
-                                    
-                                        <form class="login">
-                                          <i class="material-icons image1">account_circle</i>
-                                         
-                                            <div class="form-group" text-align="center">
-                                              <i class="material-icons">
-                                                person
-                                                </i>
-                                                <mat-form-field>                                                             
-                                                    <input matInput placeholder="Username">                                
-                                                  </mat-form-field>
-                                                  
-                                            </div>
-                                            <div class="form-group" text-align="center">
-                                                <i class="material-icons">
-                                                    email
-                                                    </i>
-                                                  <mat-form-field>                                                             
-                                                      <input matInput placeholder="Email">                                
-                                                    </mat-form-field>
-                                                    
-                                              </div>
-                                          <div class="form-group" text-align="center">
-                                            <!-- <button class="button2" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">                          
-                                              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                                            </button> -->
-                                            <i class="material-icons">
-                                              lock
-                                              </i>
-                                            <mat-form-field>
-                                              <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">                          
-                                            </mat-form-field>
-                                          </div>
-                                         
-                                          
-                                         <div class="center">
-                                           <!-- <a href="#" type="button" class="btn btn-sucess reunded button1" name="button">Log In</a> -->
-                                           <button mat-flat-button class="button1">Sign Up</button>
-                                        </div>                      
-                                          
-                                        </form>
-                                      </div>
-                                      </div>
-                                    </div>
+
+                  
