--- a/src/app/components/holidays/holidays.component.scss
+++ b/src/app/components/holidays/holidays.component.scss
@@ -168,3 +168,12 @@ table th, td {
   font-size: 18px!important;
   padding: 0px 11px!important;
 }
+.badge {
+  font-size: 16px;
+  padding: 5px;
+  font-weight: 400;
+}
+.pending-bg {
+  background: #a9b2bb;
+  color: white;
+}
