--- a/src/app/components/record/record.component.scss
+++ b/src/app/components/record/record.component.scss
@@ -1,10 +1,10 @@
 
+@import '../../../../node_modules/saturn-datepicker/bundle.css';
+
 .list1 {
 	display: grid;
 	padding-left: 33px;
 }
-
-
 
 .employee1 {
 	display: flex;
@@ -109,7 +109,6 @@
 	float: left;
 	width: 30%;
 	padding: 15px;
-	height: 100vh;
 }
 
 .history {
@@ -128,7 +127,7 @@
 	align-items: center;
 	img {
 		width: 40px;
-    height: 45px;
+    height: 48px;
 	}
 	.name {
 		line-height: 1;
@@ -176,4 +175,10 @@
 }
 .leave-request {
 	margin: 0px 20px;
+}
+.chart {
+	margin-top: 15px;
+}
+form {
+	margin-top: 10px;
 }
