--- a/src/app/components/holidays/holidays.component.html
+++ b/src/app/components/holidays/holidays.component.html
@@ -51,30 +51,30 @@
                       
                       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
                       
-                        <!-- Position Column -->
+                        <!-- Name Column -->
                         <ng-container matColumnDef="name">
                           <th mat-header-cell *matHeaderCellDef> Name </th>
                           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                         </ng-container>
                       
-                        <!-- Name Column -->
+                        <!-- Type Column -->
                         <ng-container matColumnDef="type">
                           <th mat-header-cell *matHeaderCellDef> Type </th>
                           <td mat-cell *matCellDef="let element"> {{element.type}} </td>
                         </ng-container>
                       
-                        <!-- Weight Column -->
+                        <!-- From Column -->
                         <ng-container matColumnDef="from">
                           <th mat-header-cell *matHeaderCellDef> From </th>
                           <td mat-cell *matCellDef="let element"> {{element.from}} </td>
                         </ng-container>
                       
-                        <!-- Symbol Column -->
+                        <!-- To Column -->
                         <ng-container matColumnDef="to">
                           <th mat-header-cell *matHeaderCellDef> To </th>
                           <td mat-cell *matCellDef="let element"> {{element.to}} </td>
                         </ng-container>
-                        <!-- Symbol Column -->
+                        <!-- Days Column -->
                         <ng-container matColumnDef="day">
                           <th mat-header-cell *matHeaderCellDef> Days </th>
                           <td mat-cell *matCellDef="let element"> {{element.day}} </td>
