--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -93,42 +93,116 @@
         </mwl-calendar-day-view>
       </div>
     </div>
-      
-      <div class="holiday-div">
-      <div class="holiday-heading">
-          List of Holidays
+      <div class="container-fluid mt-5">
+        <div class="row">
+          <div class="col-9 pl-0">
+            <div class="holiday-div">
+              <div class="clearfix p-3">
+              <div class="holiday-heading float-left">
+                  List of Holidays
+              </div>
+              <div class="refresh-icon float-right">
+               <span> <i class="material-icons">  autorenew  </i></span>
+              </div></div>
+              <hr>
+              <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        
+                <!--- Note that these columns can be defined in any order.
+                      The actual rendered columns are set as a property on the row definition" -->
+              
+                <!-- Position Column -->
+                <!-- <ng-container matColumnDef="position">
+                  <th mat-header-cell *matHeaderCellDef> Date </th>
+                  <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                </ng-container> -->
+              
+                <!-- Name Column -->
+                <ng-container matColumnDef="name">
+                  <th mat-header-cell *matHeaderCellDef> Date</th>
+                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+              
+              
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="symbol">
+                  <th mat-header-cell *matHeaderCellDef> Occasion </th>
+                  <td mat-cell *matCellDef="let element" > {{element.symbol}} </td>
+                </ng-container>
+              
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
+              
+            </div>
+        
+          </div>
+          <div class="col-3">
+              <div class="holiday-div">
+                  <div class="clearfix p-3">
+                  <div class="holiday-heading float-left">
+                      Today Absent
+                  </div>
+                  <div class="refresh-icon float-right">
+                   <span> <i class="material-icons">  autorenew  </i></span>
+                  </div></div>
+                  <hr>
+          <div class="absent">
+            <!-- absent person list -->
+            <div class="list">
+              <div class="img"><img src="../../../assets/images/user-1.jpg" alt="user"></div>
+              <div class="detail">
+                <p class="name">Trevor Hansen</p>
+                <p class="position">Developer</p>
+              </div>
+            </div>
+             <!-- absent person list -->
+             <div class="list">
+                <div class="img"><img src="../../../assets/images/profile-img.jpg" alt="user"></div>
+                <div class="detail">
+                  <p class="name">Devid Corn</p>
+                  <p class="position">Developer</p>
+                </div>
+              </div>
+               <!-- absent person list -->
+            <div class="list">
+                <div class="img"><img src="../../../assets/images/GIRL.jpg" alt="user"></div>
+                <div class="detail">
+                  <p class="name">Isabela Phelps</p>
+                  <p class="position">Developer</p>
+                </div>
+              </div>
+               <!-- absent person list -->
+            <div class="list">
+                <div class="img"><img src="../../../assets/images/user-1.jpg" alt="user"></div>
+                <div class="detail">
+                  <p class="name">Trevor Hansen</p>
+                  <p class="position">Developer</p>
+                </div>
+              </div>
+               <!-- absent person list -->
+            <div class="list">
+                <div class="img"><img src="../../../assets/images/profile-img.jpg" alt="user"></div>
+                <div class="detail">
+                  <p class="name">Devid Corn</p>
+                  <p class="position">Developer</p>
+                </div>
+              </div>
+                 <!-- absent person list -->
+            <div class="list">
+                <div class="img"><img src="../../../assets/images/GIRL.jpg" alt="user"></div>
+                <div class="detail">
+                  <p class="name">Isabela Phelps</p>
+                  <p class="position">Developer</p>
+                </div>
+              </div>
+          </div>        
+                  
+                </div>
+            
+          </div>
+        </div>
       </div>
-      <hr>
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-        <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
-      
-        <!-- Position Column -->
-        <!-- <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef> Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-        </ng-container> -->
-      
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Date</th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-      
-      
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef> Occasion </th>
-          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-        </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-      
-    </div>
-
+ 
 
 </div>
 
