--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -41,17 +41,30 @@ h3 {
 }
 
 .holiday-heading {
-	margin-top: 50px;
 	margin-bottom: 1px;
-	text-align: center;
-	 font-size: 1.75rem;
-	 display: flex;
-	 justify-content: center;
-	 padding: 13px;
+	 font-size: 1.125rem;
+	 font-weight: 500;
+}
+.refresh-icon {
+	margin-top: 1px;
+	color: #868e96;
+	font-size: 24px;
+	span {
+		height: 25px;
+		width: 27px;
+		border-radius: 50%;
+		
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		&:hover {
+			background-color: #e6e5e5;
+		}
+	}
 }
 .holiday-div, .calender {
 	background-color: white;
-	border-radius: 8px;
+	border-radius: 8px 8px 0px 0px;
 	box-shadow: 0 3px 3px -2px rgba(0,0,0,.2),
 	            0 6px 8px 1px rgba(0,0,0,.14),
 	            0 1px 12px 2px rgba(0,0,0,.12);
@@ -87,4 +100,37 @@ border-color: #03a9f4!important;
 
 .border-right {
 	border-right: 1px solid grey;
+}
+
+.absent {
+	padding: 7px 15px 0px 15px;
+	height: 440px;
+	.list {
+		display: flex;
+		align-items: center;
+		border-bottom: 0.5px solid #e1e1e2;
+		padding : 12px 0px;
+	img {
+		flex-shrink: 0;
+        width: 43px;
+    	height: 43px;
+    	border-radius: 50%;
+    	object-fit: cover;
+		}
+		.detail {
+			margin-left: 12px;
+			p {
+				margin: 0px;
+				color: black;
+			}
+			.name {
+				font-weight: 500;
+				font-size: 14px;
+			}
+			.position {
+				font-size: 13px;
+				color: gray;
+			}
+		}
+	}	
 }
