--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -73,7 +73,8 @@
         <div class="notify-inner pd special"> 
                 <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
 
-                Smith has applied for <span> 3 days </span>leave.
+                Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing elit rem quasi 
+                magnum veniam sapiente,fugiati fuga nesiati dolorum nulla magnum lorem ipsum sit amet consectetur.
                 <i class="material-icons cross"> close </i>
             </div>
         
