--- a/src/app/components/login/signup.component.html
+++ b/src/app/components/login/signup.component.html
@@ -1,57 +1,63 @@
-<div class="backgroundimage">
-  <div class="Aligner">
-              <div class="container d-100 text-center">
-                  
-                      <form class="login">
-                        <i class="material-icons image1">account_circle</i>
-                       <p><a href="#" class="upload">Upload your profile picture</a></p> 
-                       
-                          <div class="form-group" text-align="center">
-                           
-                                <mat-form-field appearance="outline">
-                                    <mat-label>Username</mat-label>
-                                  <input matInput placeholder="">
-                                  <i class="material-icons picon">
-                                    person
-                                    </i>
-                                  
-                                </mat-form-field>
-                          </div>
 
-                          <div class="form-group" text-align="center">
-                            
-                              <mat-form-field appearance="outline"> 
-                                  <mat-label>Email</mat-label>                                                            
-                                  <input matInput placeholder="">  
-                                  <i class="material-icons picon">
-                                    email
-                                    </i>                              
-                                </mat-form-field>
+              <!-- signup -->
+              <div class="backgroundimage">
+                <div class="Aligner">
+                            <div class="container d-100 text-center">
                                 
-                          </div>
-                        <div class="form-group" text-align="center">
-                          
-                          <mat-form-field appearance="outline">
-                              <mat-label>Password</mat-label>
-                                  <input matInput placeholder="">
-                                  <i class="material-icons picon">
-                                    lock
-                                    </i>
-                                </mat-form-field>
-                        </div>
-                        <div class="remember">
-                          <mat-checkbox>Remember me</mat-checkbox>
-                          <span class="forgot-pss"><a href="#">Forgot Password?</a></span>
-                        </div>
-                       <div class="center">
-                        
-                         <button mat-flat-button class="button1">Sign Up</button>
-                          
-                      </div>                      
-                       
-                      </form>
-                    </div>
-                    </div>
-                  </div>
+                                    <form class="login">
+                                      <i class="material-icons image1">account_circle</i>
+                                      <p><a href="#" class="upload">Upload your profile picture</a></p> 
+
+                                     
+                                        <div class="form-group" text-align="center">
+                                         
+                                              <mat-form-field appearance="outline">
+                                                  <mat-label>Username</mat-label>
+                                              
+                                                <input matInput placeholder="">
+                                                <i class="material-icons picon">
+                                                  person
+                                                  </i>
+                                                
+                                              </mat-form-field>
+                                        </div>
+                                        <div class="form-group" text-align="center">
+                            
+                                          <mat-form-field appearance="outline"> 
+                                              <mat-label>Email</mat-label>                                                            
+                                              <input matInput placeholder="">  
+                                              <i class="material-icons picon">
+                                                email
+                                                </i>                              
+                                            </mat-form-field>
+                                            
+                                      </div>
+                                      <div class="form-group" text-align="center">
+                                        
+                                        <mat-form-field appearance="outline">
+                                            <mat-label>Password</mat-label>
+                                               
+                                                <input matInput placeholder="">
+                                                <i class="material-icons picon">
+                                                  lock
+                                                  </i>
+                                              </mat-form-field>
+                                      </div>
+                                      <div class="remember">
+                                        <mat-checkbox>Remember me</mat-checkbox>
+                                        <span class="forgot-pss"><a href="#">Forgot Password?</a></span>
+                                      </div>
+                                     <div class="center">
+                                      
+                                       <button mat-flat-button class="button1">Sign Up</button>
+                                        
+                                    </div>                      
+                                      
+                                    </form>
+                                  </div>
+                                  </div>
+                                </div>
+              
+                                
 
                   
