--- a/src/app/components/notification/notification.component.scss
+++ b/src/app/components/notification/notification.component.scss
@@ -79,7 +79,7 @@
 .notification{
   margin-top: 20px;
   display: flex;
-  margin-left: 11px;
+  // margin-left: 11px;
 
 }
 .leave{
@@ -106,6 +106,7 @@
       color: white;
      }
      .image{
+       float: left;
       width: 50px;
       height:50px;
       border-radius: 50%;
@@ -115,6 +116,7 @@
       padding: 8px;
       background-color: #d6d1d1;
       margin-left:10px;
+      MARGIN-RIGHT: 10PX;
       position: relative;
       padding-right: 36px;
       }
